Fix scroll on small screen

--- a/bootstrap/less/hs-responsive-480px-max.less
+++ b/bootstrap/less/hs-responsive-480px-max.less
@@ -172,6 +172,13 @@
     #new-lead input {
         max-width: 80%;
     }
+    .find-location input {
+        max-width: 60%;
+    }
+    .link-grid li {
+        padding-left: 35px;
+        padding-right: 35px;
+    }
 }
 
 @media (max-width: 600px) {
