--- a/css/theme-responsive.css
+++ b/css/theme-responsive.css
@@ -1433,6 +1433,13 @@
   #new-lead input {
     max-width: 80%;
   }
+  .find-location input {
+    max-width: 60%;
+  }
+  .link-grid li {
+    padding-left: 35px;
+    padding-right: 35px;
+  }
 }
 @media (max-width: 600px) {
   .brand img {
